index looks nice fixed issue with gap earth

--- a/frontend/src/styles/Index.css
+++ b/frontend/src/styles/Index.css
@@ -177,7 +177,7 @@
     background 200ms ease;
   z-index: 10;
   margin-top: 1.5rem;
-  margin-bottom: clamp(120px, 20vh, 180px);
+  margin-bottom: clamp(120px, 15vh, 140px);
   position: relative;
   overflow: hidden;
   -webkit-backdrop-filter: saturate(140%);
@@ -231,7 +231,7 @@
 
 .earth-container {
   position: absolute;
-  top: calc(60% + max(0px, 450px - 60vh));
+  top: calc(50% + max(0px, 1000px - 90vh));
   left: 50%;
   transform: translate(-50%, -50%);
   width: clamp(400px, 60vw, 700px);
